<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_all"
            android:icon="@drawable/ic_filter_none_black_18dp"
            android:title="@string/all"
            app:showAsAction="ifRoom|collapseActionView"
            />
        <item
            android:id="@+id/action_news"
            android:icon="@drawable/ic_star_rate_black_18dp"
            android:title="@string/featured"
            app:showAsAction="ifRoom|collapseActionView"
            />

        <item
            android:id="@+id/action_featured"
            android:icon="@drawable/ic_local_library_black_18dp"
            android:title="@string/news"
            app:showAsAction="ifRoom|collapseActionView"
            />

        <item
            android:id="@+id/action_entertain"
            android:icon="@drawable/ic_movie_filter_black_18dp"
            android:title="@string/entertain"
            app:showAsAction="ifRoom|collapseActionView"
            />

        <item
            android:id="@+id/action_sports"
            android:icon="@drawable/ic_pool_black_18dp"
            android:title="@string/sports"
            app:showAsAction="ifRoom|collapseActionView"
            />

        <item
            android:id="@+id/action_activities"
            android:icon="@drawable/ic_font_download_black_18dp"
            android:title="@string/activities"
            app:showAsAction="ifRoom|collapseActionView"
            />

        <item
            android:id="@+id/action_lifestyles"
            android:icon="@drawable/ic_flag_black_18dp"
            android:title="@string/lifestyles"
            app:showAsAction="ifRoom|collapseActionView"
            />

        <item
            android:id="@+id/action_innovations"
            android:icon="@drawable/ic_lightbulb_outline_black_18dp"
            android:title="@string/innovations"
            app:showAsAction="ifRoom|collapseActionView"
            />

        <item
            android:id="@+id/action_opinions"
            android:icon="@drawable/ic_forum_black_18dp"
            android:title="@string/opinions"
            app:showAsAction="ifRoom|collapseActionView"
            />

        <item
            android:id="@+id/action_focus"
            android:icon="@drawable/ic_filter_center_focus_black_18dp"
            android:title="@string/focus"
            app:showAsAction="ifRoom|collapseActionView" />

    </group>

</menu>
