<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_articles"
        android:enabled="true"
        android:icon="@drawable/ic_local_library_black_18dp"
        android:title="@string/nav_articles"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_today_black_24dp"
        android:title="@string/nav_calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_social"
        android:enabled="true"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/nav_social"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_settings"
        app:showAsAction="ifRoom" />

</menu>