<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.ContactFragment">


    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp" >

                <TextView
                    android:id="@+id/contactTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/contact_title"
                    android:textStyle="bold"
                    android:textColor="@color/darkgrey"/>

                <TextView
                    android:id="@+id/termsSubContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_content"
                    android:textColor="@color/darkgrey"/>

                <TextView
                    android:id="@+id/contactEmailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/contact_email_edit"
                    android:textColor="@color/darkgrey"/>

                <TextView
                    android:id="@+id/contactEmailAd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_email_ad"
                    android:textColor="@color/darkgrey"/>

                <TextView
                    android:id="@+id/contactPhoneEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/contact_phone_edit"
                    android:textColor="@color/darkgrey"/>

                <TextView
                    android:id="@+id/contactPhoneAd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_phone_ad"
                    android:textColor="@color/darkgrey"/>
            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>